warnings quitados